[package]
name = "pass"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
bcrypt = "0.15.0"
bincode = "1.3.3"
clap = { version = "4.4.2", features = ["derive"] }
colour = "0.7.0"
once_cell = "1.18.0"
rand = "0.8.5"
ring = "0.17.5"
serde = { version = "1.0.189", features = ["derive"] }
serde-encrypt = "0.7.0"
thiserror = "1.0.49"
xdg = "2.5.2"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "account_store"
harness = false
