[package]
name = "pass"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
bcrypt = "0.15.0"
bincode = "1.3.3"
clap = { version = "4.4.8", features = ["derive"] }
cli-table = "0.4.7"
clipboard = "0.5.0"
colour = "0.7.0"
inquire = "0.6.2"
once_cell = "1.18.0"
passwords = "3.1.16"
rand = "0.8.5"
ring = "0.17.5"
serde = { version = "1.0.192", features = ["derive"] }
serde-encrypt = "0.7.0"
thiserror = "1.0.50"
xdg = "2.5.2"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "account_store"
harness = false
